--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,9 @@ h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #040b14;
+  background: #041406;
   overflow-y: auto;
+  display: flex;
 }
 
 #header .profile img {
@@ -241,8 +242,9 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
-  background-size: cover;
+  background: url("../img/fondo_colegas.jpg") top center;
+  background-size:cover;  
+  display: flex;
 }
 
 #hero:before {
@@ -263,7 +265,7 @@ h6 {
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 0px 0px 500px 100px;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
